--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,8 @@
   }
   
   body {
-    @apply text-white;
+    @apply bg-white text-gray-900;
     font-feature-settings: "rlig" 1, "calt" 1;
-    background: #0f172a;
   }
   
   html {
